--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typescript-logging": "^2.1.0",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@nx/cypress": "16.3.2",
