--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.0",
-    "axios": "^1.0.0",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "~4.18.1",
     "pg": "^8.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "6.11.2",
     "tslib": "^2.3.0",
     "typescript-logging": "^2.1.0",
