--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@swc/helpers": "~0.5.0",
-    "cors": "^2.8.5",
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "~4.18.1",
     "jsonwebtoken": "^9.0.0",
@@ -20,7 +24,8 @@
     "react-router-dom": "6.11.2",
     "tslib": "^2.3.0",
     "typescript-logging": "^2.1.0",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@nx/cypress": "16.3.2",
