User -Login API Response changed

--- a/.env
+++ b/.env
@@ -2,9 +2,11 @@ PORT=8080
 
 # DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
 
-DB_USER=zpaisa
-DB_HOST=192.168.2.12
-DB_DATABASE=zpaisa_db
-DB_PASSWORD= Zpaisa@789
-DB_PORT=5432
+DATABASE="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
+
+# DB_USER=zpaisa
+# DB_HOST=192.168.2.12
+# DB_DATABASE=zpaisa_db
+# DB_PASSWORD= Zpaisa@789
+# DB_PORT=5432
 
