--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.0",
-    "cors": "^2.8.5",
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "~4.18.1",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
+    "morgan": "^1.10.0",
     "pg": "^8.11.0",
+    "pg-promise": "^11.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
@@ -38,6 +40,8 @@
     "@testing-library/react": "14.0.0",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/md5": "^2.3.2",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
