--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=8080
-
+HOST=localhost
 # DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
 
 DATABASE="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
-
+API_ACCESS_TOKEN_SECRET_KEY=apvecretsyektercnekotapiasiapz
 # DB_USER=zpaisa
 # DB_HOST=192.168.2.12
 # DB_DATABASE=zpaisa_db
