session and password encryption added

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ DB_DATABASE=zpaisa_db
 DB_PASSWORD= Zpaisa@789
 DB_PORT=5432
 
+#Local API url
+REACT_APP_ANALYTICS_ENABLED=true
+NEXT_PUBLIC_TIMESHEET_API_URL = http://localhost:8080/api
