--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "~4.18.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
     "pg": "^8.11.0",
@@ -41,8 +43,10 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
