--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
 PORT=8080
 HOST=localhost
-# DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
+NODE_ENV=development
 
-DATABASE="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
+DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
 API_ACCESS_TOKEN_SECRET_KEY=apvecretsyektercnekotapiasiapz
+
+
 # DB_USER=zpaisa
 # DB_HOST=192.168.2.12
-# DB_DATABASE=zpaisa_db
+# DB_DEV_DATABASE_URL=zpaisa_db
 # DB_PASSWORD= Zpaisa@789
 # DB_PORT=5432
 
