--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@prisma/client": "^4.16.1",
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
@@ -69,6 +70,7 @@
     "jsdom": "~20.0.3",
     "nx": "16.3.2",
     "prettier": "^2.6.2",
+    "prisma": "^4.16.1",
     "sass": "^1.55.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
