custom axios implemented with password bcryption

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ NODE_ENV=development
 DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
 API_ACCESS_TOKEN_SECRET_KEY=apvecretsyektercnekotapiasiapz
 
+AUTH_SECRET_KEY =lksikejdlkjoijlajljljoiojlsmsmn
 
 # DB_USER=zpaisa
 # DB_HOST=192.168.2.12
