forget password api

--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ API_ACCESS_TOKEN_SECRET_KEY=apvecretsyektercnekotapiasiapz
 
 AUTH_SECRET_KEY =lksikejdlkjoijlajljljoiojlsmsmn
 
+#forget passwors secret key
+NEXT_PUBLIC_FORGETPASSWORD_TOKEN_SECRET_KEY = cdyu2dfg4yuds&gcy587ydbdcduyudu
+
 # DB_USER=zpaisa
 # DB_HOST=192.168.2.12
 # DB_DEV_DATABASE_URL=zpaisa_db
