--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "~4.18.1",
+    "express-validator": "^7.0.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
