--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@prisma/client": "^4.16.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.1",
     "react-router-dom": "6.11.2",
     "tslib": "^2.3.0",
     "typescript-logging": "^2.1.0",
