--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "6.11.2",
+    "redux-persist": "^6.0.0",
     "tslib": "^2.3.0",
     "typescript-logging": "^2.1.0",
     "winston": "^3.9.0",
