New Database & Changes Implementation

--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@ PORT=8080
 HOST=localhost
 NODE_ENV=development
 
-DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
+# DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
+DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/omniflux_dev_db"
+
+
 API_ACCESS_TOKEN_SECRET_KEY=apvecretsyektercnekotapiasiapz
 
 AUTH_SECRET_KEY =lksikejdlkjoijlajljljoiojlsmsmn
