--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ HOST=localhost
 NODE_ENV=development
 
 # DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
-DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/omniflux_dev_db"
-# DEV_DATABASE_URL="postgres://postgres:omni-flux@&651.!@3.108.30.2:5432/omniflux"
+# DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/omniflux_dev_db"
+DEV_DATABASE_URL="postgres://postgres:omni-flux@&651.!@3.108.30.2:5432/omniflux"
 
 
 
