--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "6.11.2",
