--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "mui-datatables": "^4.3.0",
     "pg": "^8.11.0",
     "pg-promise": "^11.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
-    "react-router-dom": "6.11.2",
+    "react-router-dom": "^6.14.2",
     "redux-persist": "^6.0.0",
     "tslib": "^2.3.0",
     "typescript-logging": "^2.1.0",
