--- a/.env
+++ b/.env
@@ -1,26 +1,17 @@
 PORT=8080
 HOST=localhost
-NODE_ENV=development
+NODE_ENV=LOCAL
 
 # DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
 # DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/omniflux_dev_db"
 DEV_DATABASE_URL="postgres://postgres:omni-flux@&651.!@3.108.30.2:5432/omniflux"
-
-
-
 API_ACCESS_TOKEN_SECRET_KEY=apvecretsyektercnekotapiasiapz
-
 AUTH_SECRET_KEY =lksikejdlkjoijlajljljoiojlsmsmn
-
 #forget passwors secret key
 NEXT_PUBLIC_FORGETPASSWORD_TOKEN_SECRET_KEY = cdyu2dfg4yuds&gcy587ydbdcduyudu
-
-# DB_USER=zpaisa
-# DB_HOST=192.168.2.12
-# DB_DEV_DATABASE_URL=zpaisa_db
-# DB_PASSWORD= Zpaisa@789
-# DB_PORT=5432
 
 #Local API url
 REACT_APP_ANALYTICS_ENABLED=true
 REACT_APP_URL = http://localhost:4200
+COOKIE_DOMAIN = .aalamsoft.com
+
