--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mui-datatables": "^4.3.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
     "pg-promise": "^11.5.0",
     "react": "^18.2.0",
@@ -39,6 +40,7 @@
     "tslib": "^2.3.0",
     "typescript-logging": "^2.1.0",
     "winston": "^3.9.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "devDependencies": {
