--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.4.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
+    "lodash.debounce": "^4.0.8",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mui-datatables": "^4.3.0",
