File Upload API

--- a/.env
+++ b/.env
@@ -2,11 +2,25 @@ PORT=8080
 HOST=localhost
 NODE_ENV=LOCAL
 
+# Database Credentials
+
 # DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/zpaisa_db"
 # DEV_DATABASE_URL="postgres://zpaisa:Zpaisa@789@192.168.2.12:5432/omniflux_dev_db"
 DEV_DATABASE_URL="postgres://postgres:omni-flux@&651.!@3.108.30.2:5432/omniflux"
+
+# Secret Key's
 API_ACCESS_TOKEN_SECRET_KEY=apvecretsyektercnekotapiasiapz
 AUTH_SECRET_KEY =lksikejdlkjoijlajljljoiojlsmsmn
+
+# File-Upload-Local-Path
+FILE_UPLOAD_LOCAL_PATH=D:/Vijay/OmniFluxERP/Omni-Flux-Files
+
+# S3 Credentials
+AWS_BUCKET_NAME=zpaisa-purchase-sale-docs
+AWS_BUCKET_REGION=ap-south-1
+AWS_SECRET_ACCESS_KEY=EiRllKaAiKY+rmlBVslBuVWEPYdjGECSI3WLzJEk
+AWS_ACCESS_KEY_ID=AKIARPVRHQ42FMJTN5Z3
+
 #forget passwors secret key
 NEXT_PUBLIC_FORGETPASSWORD_TOKEN_SECRET_KEY = cdyu2dfg4yuds&gcy587ydbdcduyudu
 
