--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.374.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
@@ -12,6 +13,8 @@
     "@prisma/client": "^4.16.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@swc/helpers": "~0.5.0",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.1420.0",
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -20,6 +23,7 @@
     "express": "~4.18.1",
     "express-validator": "^7.0.1",
     "formik": "^2.4.2",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
@@ -64,6 +68,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/md5": "^2.3.2",
     "@types/mui-datatables": "^4.3.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
