Email Configuration Set Up

--- a/.env
+++ b/.env
@@ -21,6 +21,14 @@ AWS_BUCKET_REGION=ap-south-1
 AWS_SECRET_ACCESS_KEY=EiRllKaAiKY+rmlBVslBuVWEPYdjGECSI3WLzJEk
 AWS_ACCESS_KEY_ID=AKIARPVRHQ42FMJTN5Z3
 
+# Email Configurations
+EMAIL_HOST = need_to_configure
+EMAIL_USER =need_to_configure
+EMAIL_PASSWORD = need_to_configure
+EMAIL_FROM = need_to_configure
+EMAIL_PORT = need_to_configure
+EMAIL_MAX_CONNECTIONS = need_to_configure
+
 #forget passwors secret key
 NEXT_PUBLIC_FORGETPASSWORD_TOKEN_SECRET_KEY = cdyu2dfg4yuds&gcy587ydbdcduyudu
 
