--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "mui-datatables": "^4.3.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "pg": "^8.11.0",
     "pg-promise": "^11.5.0",
     "react": "^18.2.0",
