Generate OTP and Verify OTP API

--- a/.env
+++ b/.env
@@ -22,12 +22,15 @@ AWS_SECRET_ACCESS_KEY=EiRllKaAiKY+rmlBVslBuVWEPYdjGECSI3WLzJEk
 AWS_ACCESS_KEY_ID=AKIARPVRHQ42FMJTN5Z3
 
 # Email Configurations
-EMAIL_HOST = need_to_configure
-EMAIL_USER =need_to_configure
-EMAIL_PASSWORD = need_to_configure
-EMAIL_FROM = need_to_configure
-EMAIL_PORT = need_to_configure
-EMAIL_MAX_CONNECTIONS = need_to_configure
+EMAIL_HOST = smtp.office365.com
+EMAIL_USER = alerts@aalamsoft.com
+EMAIL_PASSWORD = Yom40875
+EMAIL_FROM = alerts@aalamsoft.com
+EMAIL_PORT = 587
+EMAIL_MAX_CONNECTIONS = 200
+
+# Maximum Attempt Allowed for OTP
+MAX_ATTEMPTS_FOR_OTP=5
 
 #forget passwors secret key
 NEXT_PUBLIC_FORGETPASSWORD_TOKEN_SECRET_KEY = cdyu2dfg4yuds&gcy587ydbdcduyudu
