--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nx/typescript"],
-      "rules": {}
+      "rules": {"@typescript-eslint/no-explicit-any": "off"}
     },
     {
       "files": ["*.js", "*.jsx"],
