--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "~4.18.1",
     "express-validator": "^7.0.1",
