--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8080:80"
   backend:
     build:
-       context: .
-      dockerfile: ./apps/Api/Dockerfile
+      context: .
+      dockerfile: ./apps/api/Dockerfile
     ports:
       - "3000:3000"
