--- a/.env
+++ b/.env
@@ -37,6 +37,9 @@ MAX_ATTEMPTS_FOR_OTP=5
 # Maximum Count Allowed For Purchase Request Documents
 MAX_COUNT_FOR_PURCHASE_REQUEST_DOC=5
 
+# Maximum Count Allowed For Purchase Order Item Documents
+MAX_COUNT_FOR_PURCHASE_ORDER_ITEM_DOC=5
+
 #forget passwors secret key
 NEXT_PUBLIC_FORGETPASSWORD_TOKEN_SECRET_KEY = cdyu2dfg4yuds&gcy587ydbdcduyudu
 
