--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 .env
-/logs
+# /logs
 package-lock.json
 
 # compiled output
