--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mui-datatables": "^4.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "pdfkit": "^0.13.0",
     "pg": "^8.11.0",
     "pg-promise": "^11.5.0",
     "react": "^18.2.0",
@@ -39,6 +42,7 @@
     "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
+    "react-pdf": "^7.4.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
