--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=8080
-HOST=192.168.2.27
-# HOST=localhost
-NODE_ENV=LOCAL
+# HOST=192.168.2.27
+HOST=localhost
+# NODE_ENV=LOCAL
 
 
 # Database Credentials
