--- a/.env
+++ b/.env
@@ -40,6 +40,9 @@ MAX_COUNT_FOR_PURCHASE_REQUEST_DOC=5
 # Maximum Count Allowed For Purchase Order Item Documents
 MAX_COUNT_FOR_PURCHASE_ORDER_ITEM_DOC=5
 
+# Transaction Time Out in Millisecond's
+TRANSACTION_TIMEOUT = 100000
+
 #forget passwors secret key
 NEXT_PUBLIC_FORGETPASSWORD_TOKEN_SECRET_KEY = cdyu2dfg4yuds&gcy587ydbdcduyudu
 
