--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "~4.18.1",
     "express-validator": "^7.0.1",
     "formik": "^2.4.2",
