--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@swc/helpers": "~0.5.0",
     "@types/aws-sdk": "^2.7.0",
+    "@types/react-chartjs-2": "^2.5.7",
     "aws-sdk": "^2.1420.0",
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.4.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
@@ -38,6 +40,7 @@
     "pg": "^8.11.0",
     "pg-promise": "^11.5.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.45.1",
