--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
-# HOST=192.168.2.27
-HOST=localhost
+HOST=192.168.2.27
+# HOST=localhost
 NODE_ENV=LOCAL
 
 
@@ -53,3 +53,7 @@ REACT_APP_URL = http://localhost:4200
 # REACT_DEV_URL = http://global.aalamsoft.com:3002
 COOKIE_DOMAIN = .aalamsoft.com
 
+
+#File Path 
+S3_FILE_PATH =apps/
+# S3_FILE_PATH =tmp/
