--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,9 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nx/typescript"],
-      "rules": {"@typescript-eslint/no-explicit-any": "off"}
+      "rules": {"@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-unused-vars":"off"
+    }
     },
     {
       "files": ["*.js", "*.jsx"],
