--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,9 @@
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nx/typescript"],
       "rules": {"@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/no-unused-vars":"off"
+      "@typescript-eslint/no-unused-vars":"off",
+      "react-hooks/rules-of-hooks": "off",
+      "react-hooks/exhaustive-deps": "off"
     }
     },
     {
