Email Company Name For Email Configurations Globally Implemented

--- a/.env
+++ b/.env
@@ -44,6 +44,9 @@ MAX_COUNT_FOR_PURCHASE_ORDER_ITEM_DOC=5
 # Transaction Time Out in Millisecond's
 TRANSACTION_TIMEOUT = 100000
 
+# Company Name For Email Configurations
+COMPANY_NAME = The Omni-Flux ERP Team
+
 #forget passwors secret key
 NEXT_PUBLIC_FORGETPASSWORD_TOKEN_SECRET_KEY = cdyu2dfg4yuds&gcy587ydbdcduyudu
 
