--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
-PORT=8080
-HOST=192.168.2.27
-# HOST=localhost
+API_PORT=8080
+GATEWAY_PORT=5000
+HRMS_API_PORT=8001
+# HOST=192.168.2.27
+HOST=localhost
 NODE_ENV=LOCAL
 
+# Development
+BACKEND_API_URL= http://localhost:8080
+HRMS_API_URL=http://localhost:8001
 
 # Database Credentials
 
