--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^7.0.1",
     "formik": "^2.4.2",
     "fs": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
@@ -61,15 +62,18 @@
     "@nx/cypress": "16.3.2",
     "@nx/esbuild": "16.3.2",
     "@nx/eslint-plugin": "16.3.2",
-    "@nx/jest": "16.3.2",
-    "@nx/js": "16.3.2",
+    "@nx/express": "^17.1.3",
+    "@nx/jest": "17.1.3",
+    "@nx/js": "17.1.3",
     "@nx/linter": "16.3.2",
-    "@nx/node": "16.3.2",
+    "@nx/node": "17.1.3",
     "@nx/react": "16.3.2",
     "@nx/vite": "^16.3.2",
+    "@nx/webpack": "17.1.3",
     "@nx/workspace": "16.3.2",
+    "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
+    "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "~4.17.13",
