project edit scroll handle

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
-HOST=192.168.2.27
-# HOST=localhost
+# HOST=192.168.2.27
+HOST=localhost
 NODE_ENV=LOCAL
 
 
@@ -54,6 +54,6 @@ REACT_APP_URL = http://global.aalamsoft.com:3002
 COOKIE_DOMAIN = .aalamsoft.com
 
 #File Path 
-S3_FILE_PATH =apps/  #for production
-# S3_FILE_PATH =tmp/
+# S3_FILE_PATH =apps/  #for production
+S3_FILE_PATH =tmp/
 
