Multiple Database and Prisma Integrated

--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ HRMS_API_URL=http://localhost:8001
 # DEV_DATABASE_URL="postgres://postgres:omni-flux@&651.!@3.108.30.2:5432/omniflux"
 DEV_DATABASE_URL="postgres://postgres:omni-flux@&651.!@3.108.30.2:5432/omniflux_copy"
 
+HRMS_DATABASE_URL="postgres://postgres:omni-flux@&651.!@3.108.30.2:5432/hrmsintegration"
+
+
 # Secret Key's
 API_ACCESS_TOKEN_SECRET_KEY=apvecretsyektercnekotapiasiapz
 AUTH_SECRET_KEY =lksikejdlkjoijlajljljoiojlsmsmn
