--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=nodeJS-app
-sonar.projectName=nodeJS-app
+sonar.projectKey=ERP-project
+sonar.projectName=ERP-project
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
