--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=omni-flux-code
-sonar.projectName=omni-flux-code
+sonar.projectKey=Omni-ERP
+sonar.projectName=Omni-ERP
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
