--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@omni-flux/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+     "sonar": "sonar-scanner"
+  },
   "private": true,
   "dependencies": {
     "@aws-sdk/client-s3": "^3.374.0",
