--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
-sonar.projectKey=ERP-project
-sonar.projectName=ERP-project
+sonar.projectKey=Omni-ERP
+sonar.projectName=Omni-ERP
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
 sonar.host.url=http://192.168.2.29:9000
-sonar.login=sqa_01f10eb317336ac0fa80c3205d864646599725b5
-sonar.exclusions=**node_modules/**,/coverage/lcov-report/*,test/*.js
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.login=sqa_7f260feeeec2af61c8c0409260fc7722ffbf153f
+sonar.javascript.lcov.reportPaths=coverage/lcov.inf
