--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@prisma/client": "^4.16.1",
+    "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@swc/helpers": "~0.5.0",
     "@types/aws-sdk": "^2.7.0",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.6.0",
+    "keycloak-js": "^22.0.5",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mui-datatables": "^4.3.0",
