--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=Omni-ERP
-sonar.projectName=Omni-ERP
+sonar.projectKey=Omni-ERP-Prod
+sonar.projectName=Omni-ERP-Prod
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
